--- a/style.css
+++ b/style.css
@@ -4,4 +4,41 @@ body{
     color: seashell;
     background-color: black;
     opacity: 0.9;
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+}
+
+ul{
+    display: flex;
+    position: relative;
+}
+
+ul li{
+    display: flex;
+    margin-right: 20px;
+}
+
+ul li a{
+    text-decoration: none;
+    color: tomato;
+}
+
+ul li a:hover{
+    border-bottom: 1px solid tomato;
+}
+
+ul li a:active{
+    scale: 1.02;
+}
+.logo{
+    margin-left: 10px;
+    height: 50px;
 }
