--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ ul li a:active{
     justify-content: center;
     align-items: center ;
     flex-direction: column; 
-    height: 130vh;
+    height: 100%;
 }
 
 .bannere .box{
@@ -80,7 +80,7 @@ ul li a:active{
 }
 
 .tea .box .imbox{
-    margin: 20px;
+    margin: 50px;
     text-align: center;
 }
 
@@ -90,4 +90,55 @@ ul li a:active{
     height: 200px;
     width: 300px;
     object-fit: cover;
+}
+
+
+
+/* LOCATION */
+
+
+.location{
+    background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    flex-direction: column;
+}
+
+
+.location .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.location .container > div{
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    margin: 40px;
+    text-align: center;
+    line-height: 50px;
+}
+
+
+
+/* FOOTER */
+
+.footer .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+}
+
+.copyright{
+    margin-left: 20px;
 }
